syntax = "proto3";

package skyrosgrpc;

import "user.proto";

import "general.proto";

option go_package = "./skyrosgrpc";

message ProductFilter {
  repeated string ids = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
  User seller = 5;
}

message ProductsResponse {
    Status status = 1;
    map<string,Product> products = 2;
}

service ProductService {
  rpc GetProducts(ProductFilter) returns (ProductsResponse) {}
}
